--- a/my-custom-kernel.config
+++ b/my-custom-kernel.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.12.12-hardened1 Kernel Configuration
+# Linux/x86 6.13.5-hardened1 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 14.2.1 20241116"
 CONFIG_CC_IS_GCC=y
@@ -128,9 +128,11 @@ CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
 # end of BPF subsystem
 
 CONFIG_PREEMPT_BUILD=y
+CONFIG_ARCH_HAS_PREEMPT_LAZY=y
 # CONFIG_PREEMPT_NONE is not set
-CONFIG_PREEMPT_VOLUNTARY=y
-# CONFIG_PREEMPT is not set
+# CONFIG_PREEMPT_VOLUNTARY is not set
+CONFIG_PREEMPT=y
+# CONFIG_PREEMPT_LAZY is not set
 # CONFIG_PREEMPT_RT is not set
 CONFIG_PREEMPT_COUNT=y
 CONFIG_PREEMPTION=y
@@ -516,6 +518,7 @@ CONFIG_LEGACY_VSYSCALL_NONE=y
 # CONFIG_MODIFY_LDT_SYSCALL is not set
 # CONFIG_STRICT_SIGALTSTACK_SIZE is not set
 CONFIG_HAVE_LIVEPATCH=y
+CONFIG_X86_BUS_LOCK_DETECT=y
 # end of Processor type and features
 
 CONFIG_CC_HAS_NAMED_AS=y
@@ -595,6 +598,7 @@ CONFIG_ACPI_FPDT=y
 CONFIG_ACPI_LPIT=y
 CONFIG_ACPI_SLEEP=y
 CONFIG_ACPI_REV_OVERRIDE_POSSIBLE=y
+CONFIG_ACPI_EC=y
 CONFIG_ACPI_EC_DEBUGFS=m
 CONFIG_ACPI_AC=m
 CONFIG_ACPI_BATTERY=m
@@ -758,6 +762,7 @@ CONFIG_KVM_XFER_TO_GUEST_WORK=y
 CONFIG_HAVE_KVM_PM_NOTIFIER=y
 CONFIG_KVM_GENERIC_HARDWARE_ENABLING=y
 CONFIG_KVM_GENERIC_MMU_NOTIFIER=y
+CONFIG_KVM_ELIDE_TLB_FLUSH_IF_YOUNG=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM_X86=m
 CONFIG_KVM=m
@@ -863,6 +868,8 @@ CONFIG_STACKPROTECTOR_STRONG=y
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 CONFIG_ARCH_SUPPORTS_LTO_CLANG_THIN=y
 CONFIG_LTO_NONE=y
+CONFIG_ARCH_SUPPORTS_AUTOFDO_CLANG=y
+CONFIG_ARCH_SUPPORTS_PROPELLER_CLANG=y
 CONFIG_ARCH_SUPPORTS_CFI_CLANG=y
 CONFIG_HAVE_ARCH_WITHIN_STACK_FRAMES=y
 CONFIG_HAVE_CONTEXT_TRACKING_USER=y
@@ -1206,6 +1213,7 @@ CONFIG_PER_VMA_LOCK=y
 CONFIG_LOCK_MM_AND_FIND_VMA=y
 CONFIG_IOMMU_MM_DATA=y
 CONFIG_EXECMEM=y
+CONFIG_ARCH_HAS_USER_SHADOW_STACK=y
 
 #
 # Data Access Monitoring
@@ -1229,6 +1237,7 @@ CONFIG_NET_REDIRECT=y
 CONFIG_SKB_DECRYPTED=y
 CONFIG_SKB_EXTENSIONS=y
 CONFIG_NET_DEVMEM=y
+CONFIG_NET_SHAPER=y
 
 #
 # Networking options
@@ -1686,6 +1695,7 @@ CONFIG_NF_TABLES_BRIDGE=m
 CONFIG_NFT_BRIDGE_META=m
 CONFIG_NFT_BRIDGE_REJECT=m
 CONFIG_NF_CONNTRACK_BRIDGE=m
+# CONFIG_BRIDGE_NF_EBTABLES_LEGACY is not set
 # CONFIG_BRIDGE_NF_EBTABLES is not set
 # CONFIG_IP_DCCP is not set
 # CONFIG_IP_SCTP is not set
@@ -2008,6 +2018,7 @@ CONFIG_PCI_LOCKLESS_CONFIG=y
 CONFIG_PCI_IOV=y
 CONFIG_PCI_PRI=y
 CONFIG_PCI_PASID=y
+# CONFIG_PCIE_TPH is not set
 CONFIG_PCI_LABEL=y
 CONFIG_PCI_HYPERV=m
 # CONFIG_PCIE_BUS_TUNE_OFF is not set
@@ -2021,6 +2032,7 @@ CONFIG_HOTPLUG_PCI=y
 CONFIG_HOTPLUG_PCI_ACPI=y
 CONFIG_HOTPLUG_PCI_ACPI_IBM=m
 # CONFIG_HOTPLUG_PCI_CPCI is not set
+# CONFIG_HOTPLUG_PCI_OCTEONEP is not set
 # CONFIG_HOTPLUG_PCI_SHPC is not set
 
 #
@@ -2232,7 +2244,6 @@ CONFIG_UNACCEPTED_MEMORY=y
 
 CONFIG_UEFI_CPER=y
 CONFIG_UEFI_CPER_X86=y
-CONFIG_IMX_SCMI_MISC_DRV=m
 
 #
 # Qualcomm firmware drivers
@@ -2523,6 +2534,7 @@ CONFIG_MISC_RTSX=m
 # CONFIG_TPS6594_ESM is not set
 # CONFIG_TPS6594_PFSM is not set
 # CONFIG_NSM is not set
+# CONFIG_MCHP_LAN966X_PCI is not set
 CONFIG_C2PORT=m
 CONFIG_C2PORT_DURAMAR_2150=m
 
@@ -2541,13 +2553,6 @@ CONFIG_EEPROM_EE1004=m
 CONFIG_CB710_CORE=m
 # CONFIG_CB710_DEBUG is not set
 CONFIG_CB710_DEBUG_ASSUMPTIONS=y
-
-#
-# Texas Instruments shared transport line discipline
-#
-CONFIG_TI_ST=m
-# end of Texas Instruments shared transport line discipline
-
 # CONFIG_SENSORS_LIS3_I2C is not set
 CONFIG_ALTERA_STAPL=m
 CONFIG_INTEL_MEI=m
@@ -2713,6 +2718,7 @@ CONFIG_ATA_PIIX=m
 CONFIG_MD=y
 CONFIG_BLK_DEV_MD=m
 # CONFIG_MD_BITMAP_FILE is not set
+# CONFIG_MD_LINEAR is not set
 CONFIG_MD_RAID0=m
 # CONFIG_MD_RAID1 is not set
 # CONFIG_MD_RAID10 is not set
@@ -2858,6 +2864,7 @@ CONFIG_BE2NET=m
 # CONFIG_NET_VENDOR_FUJITSU is not set
 # CONFIG_NET_VENDOR_FUNGIBLE is not set
 # CONFIG_NET_VENDOR_GOOGLE is not set
+# CONFIG_NET_VENDOR_HISILICON is not set
 # CONFIG_NET_VENDOR_HUAWEI is not set
 # CONFIG_NET_VENDOR_INTEL is not set
 # CONFIG_JME is not set
@@ -3396,7 +3403,7 @@ CONFIG_RMI4_F11=y
 CONFIG_RMI4_F12=y
 CONFIG_RMI4_F30=y
 # CONFIG_RMI4_F34 is not set
-# CONFIG_RMI4_F3A is not set
+CONFIG_RMI4_F3A=y
 # CONFIG_RMI4_F54 is not set
 # CONFIG_RMI4_F55 is not set
 
@@ -3614,9 +3621,9 @@ CONFIG_I2C_ALI1535=m
 CONFIG_I2C_ALI1563=m
 CONFIG_I2C_ALI15X3=m
 CONFIG_I2C_AMD756=m
-CONFIG_I2C_AMD756_S4882=m
 CONFIG_I2C_AMD8111=m
 CONFIG_I2C_AMD_MP2=m
+# CONFIG_I2C_AMD_ASF is not set
 CONFIG_I2C_I801=m
 CONFIG_I2C_I801_MUX=y
 CONFIG_I2C_ISCH=m
@@ -3624,7 +3631,6 @@ CONFIG_I2C_ISMT=m
 CONFIG_I2C_PIIX4=m
 CONFIG_I2C_CHT_WC=m
 CONFIG_I2C_NFORCE2=m
-CONFIG_I2C_NFORCE2_S4985=m
 CONFIG_I2C_NVIDIA_GPU=m
 CONFIG_I2C_SIS5595=m
 CONFIG_I2C_SIS630=m
@@ -3692,6 +3698,7 @@ CONFIG_CDNS_I3C_MASTER=m
 CONFIG_DW_I3C_MASTER=m
 CONFIG_SVC_I3C_MASTER=m
 CONFIG_MIPI_I3C_HCI=m
+# CONFIG_MIPI_I3C_HCI_PCI is not set
 CONFIG_SPI=y
 # CONFIG_SPI_DEBUG is not set
 CONFIG_SPI_MASTER=y
@@ -3786,6 +3793,7 @@ CONFIG_PTP_1588_CLOCK_OPTIONAL=m
 # Enable PHYLIB and NETWORK_PHY_TIMESTAMPING to see the additional clocks.
 #
 CONFIG_PTP_1588_CLOCK_KVM=m
+CONFIG_PTP_1588_CLOCK_VMCLOCK=m
 CONFIG_PTP_1588_CLOCK_IDT82P33=m
 CONFIG_PTP_1588_CLOCK_IDTCM=m
 CONFIG_PTP_1588_CLOCK_FC3W=m
@@ -3858,6 +3866,7 @@ CONFIG_GPIO_IDIO_16=m
 #
 # Memory mapped GPIO drivers
 #
+# CONFIG_GPIO_ALTERA is not set
 CONFIG_GPIO_AMDPT=m
 CONFIG_GPIO_DWAPB=m
 CONFIG_GPIO_EXAR=m
@@ -3866,8 +3875,10 @@ CONFIG_GPIO_GRANITERAPIDS=m
 CONFIG_GPIO_ICH=m
 CONFIG_GPIO_MB86S7X=m
 CONFIG_GPIO_MENZ127=m
+# CONFIG_GPIO_POLARFIRE_SOC is not set
 CONFIG_GPIO_SIOX=m
 CONFIG_GPIO_TANGIER=m
+# CONFIG_GPIO_XILINX is not set
 CONFIG_GPIO_AMD_FCH=m
 # end of Memory mapped GPIO drivers
 
@@ -3945,6 +3956,7 @@ CONFIG_GPIO_XRA1403=m
 # USB GPIO expanders
 #
 CONFIG_GPIO_VIPERBOARD=m
+# CONFIG_GPIO_MPSSE is not set
 # end of USB GPIO expanders
 
 #
@@ -4139,6 +4151,7 @@ CONFIG_SENSORS_IBMPEX=m
 CONFIG_SENSORS_IIO_HWMON=m
 CONFIG_SENSORS_I5500=m
 CONFIG_SENSORS_CORETEMP=m
+# CONFIG_SENSORS_ISL28022 is not set
 CONFIG_SENSORS_IT87=m
 CONFIG_SENSORS_JC42=m
 CONFIG_SENSORS_POWERZ=m
@@ -4205,6 +4218,7 @@ CONFIG_SENSORS_NCT6683=m
 CONFIG_SENSORS_NCT6775_CORE=m
 CONFIG_SENSORS_NCT6775=m
 CONFIG_SENSORS_NCT6775_I2C=m
+# CONFIG_SENSORS_NCT7363 is not set
 CONFIG_SENSORS_NCT7802=m
 CONFIG_SENSORS_NCT7904=m
 CONFIG_SENSORS_NPCM7XX=m
@@ -4371,6 +4385,7 @@ CONFIG_THERMAL_GOV_BANG_BANG=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
 # CONFIG_THERMAL_GOV_POWER_ALLOCATOR is not set
 # CONFIG_DEVFREQ_THERMAL is not set
+# CONFIG_PCIE_THERMAL is not set
 # CONFIG_THERMAL_EMULATION is not set
 
 #
@@ -4457,7 +4472,6 @@ CONFIG_SC1200_WDT=m
 CONFIG_PC87413_WDT=m
 CONFIG_NV_TCO=m
 CONFIG_60XX_WDT=m
-CONFIG_CPU5_WDT=m
 CONFIG_SMSC_SCH311X_WDT=m
 CONFIG_SMSC37B787_WDT=m
 CONFIG_TQMX86_WDT=m
@@ -4518,6 +4532,7 @@ CONFIG_MFD_BCM590XX=m
 CONFIG_MFD_BD9571MWV=m
 CONFIG_MFD_AXP20X=m
 CONFIG_MFD_AXP20X_I2C=m
+# CONFIG_MFD_CGBC is not set
 CONFIG_MFD_CROS_EC_DEV=m
 CONFIG_MFD_CS42L43=m
 CONFIG_MFD_CS42L43_I2C=m
@@ -5174,6 +5189,7 @@ CONFIG_VIDEO_CADENCE_CSI2TX=m
 #
 # Raspberry Pi media platform drivers
 #
+# CONFIG_VIDEO_RP1_CFE is not set
 
 #
 # Renesas media platform drivers
@@ -5720,22 +5736,32 @@ CONFIG_DRM_PANIC_BACKGROUND_COLOR=0x000000
 CONFIG_DRM_PANIC_SCREEN="kmsg"
 # CONFIG_DRM_DEBUG_DP_MST_TOPOLOGY_REFS is not set
 # CONFIG_DRM_DEBUG_MODESET_LOCK is not set
+CONFIG_DRM_CLIENT=y
+CONFIG_DRM_CLIENT_LIB=y
+CONFIG_DRM_CLIENT_SELECTION=y
+CONFIG_DRM_CLIENT_SETUP=y
+
+#
+# Supported DRM clients
+#
 CONFIG_DRM_FBDEV_EMULATION=y
 CONFIG_DRM_FBDEV_OVERALLOC=100
 # CONFIG_DRM_FBDEV_LEAK_PHYS_SMEM is not set
+# end of Supported DRM clients
+
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
 CONFIG_DRM_DISPLAY_HELPER=m
 CONFIG_DRM_DISPLAY_DP_AUX_CEC=y
 CONFIG_DRM_DISPLAY_DP_AUX_CHARDEV=y
 CONFIG_DRM_DISPLAY_DP_HELPER=y
 CONFIG_DRM_DISPLAY_DP_TUNNEL=y
+CONFIG_DRM_DISPLAY_DSC_HELPER=y
 CONFIG_DRM_DISPLAY_HDCP_HELPER=y
 CONFIG_DRM_DISPLAY_HDMI_HELPER=y
 CONFIG_DRM_TTM=m
 CONFIG_DRM_EXEC=m
 CONFIG_DRM_GPUVM=m
 CONFIG_DRM_BUDDY=m
-CONFIG_DRM_VRAM_HELPER=m
 CONFIG_DRM_TTM_HELPER=m
 CONFIG_DRM_GEM_DMA_HELPER=m
 CONFIG_DRM_GEM_SHMEM_HELPER=y
@@ -5839,6 +5865,7 @@ CONFIG_DRM_XE_FORCE_PROBE=""
 # CONFIG_DRM_XE_WERROR is not set
 # CONFIG_DRM_XE_DEBUG is not set
 # CONFIG_DRM_XE_DEBUG_VM is not set
+# CONFIG_DRM_XE_DEBUG_MEMIRQ is not set
 # CONFIG_DRM_XE_DEBUG_SRIOV is not set
 # CONFIG_DRM_XE_DEBUG_MEM is not set
 # CONFIG_DRM_XE_LARGE_GUC_BUFFER is not set
@@ -5905,6 +5932,7 @@ CONFIG_TINYDRM_ILI9341=m
 CONFIG_TINYDRM_ILI9486=m
 CONFIG_TINYDRM_MI0283QT=m
 CONFIG_TINYDRM_REPAPER=m
+# CONFIG_TINYDRM_SHARP_MEMORY is not set
 CONFIG_TINYDRM_ST7586=m
 CONFIG_TINYDRM_ST7735R=m
 CONFIG_DRM_XEN=y
@@ -5915,6 +5943,7 @@ CONFIG_DRM_SSD130X=m
 CONFIG_DRM_SSD130X_I2C=m
 CONFIG_DRM_SSD130X_SPI=m
 CONFIG_DRM_HYPERV=m
+CONFIG_DRM_PANEL_BACKLIGHT_QUIRKS=m
 CONFIG_DRM_PRIVACY_SCREEN=y
 # CONFIG_DRM_WERROR is not set
 CONFIG_DRM_PANEL_ORIENTATION_QUIRKS=y
@@ -6023,7 +6052,7 @@ CONFIG_FB_IOMEM_FOPS=y
 CONFIG_FB_IOMEM_HELPERS=y
 CONFIG_FB_SYSMEM_HELPERS=y
 CONFIG_FB_SYSMEM_HELPERS_DEFERRED=y
-CONFIG_FB_BACKLIGHT=m
+CONFIG_FB_BACKLIGHT=y
 CONFIG_FB_MODE_HELPERS=y
 CONFIG_FB_TILEBLITTING=y
 # end of Frame buffer Devices
@@ -6095,6 +6124,7 @@ CONFIG_FRAMEBUFFER_CONSOLE_DEFERRED_TAKEOVER=y
 CONFIG_DRM_ACCEL=y
 CONFIG_DRM_ACCEL_HABANALABS=m
 CONFIG_DRM_ACCEL_IVPU=m
+# CONFIG_DRM_ACCEL_IVPU_DEBUG is not set
 CONFIG_DRM_ACCEL_QAIC=m
 CONFIG_SOUND=m
 CONFIG_SOUND_OSS_CORE=y
@@ -6140,7 +6170,6 @@ CONFIG_SND_SEQ_MIDI=m
 CONFIG_SND_SEQ_MIDI_EMUL=m
 CONFIG_SND_SEQ_VIRMIDI=m
 # CONFIG_SND_SEQ_UMP is not set
-CONFIG_SND_SEQ_UMP_CLIENT=m
 CONFIG_SND_MPU401_UART=m
 CONFIG_SND_OPL3_LIB=m
 CONFIG_SND_OPL3_LIB_SEQ=m
@@ -6342,7 +6371,9 @@ CONFIG_SND_AMD_ASOC_ACP70=m
 CONFIG_SND_SOC_AMD_MACH_COMMON=m
 CONFIG_SND_SOC_AMD_LEGACY_MACH=m
 CONFIG_SND_SOC_AMD_SOF_MACH=m
+CONFIG_SND_SOC_AMD_SDW_MACH_COMMON=m
 CONFIG_SND_SOC_AMD_SOF_SDW_MACH=m
+# CONFIG_SND_SOC_AMD_LEGACY_SDW_MACH is not set
 CONFIG_SND_AMD_SOUNDWIRE_ACPI=m
 CONFIG_SND_SOC_AMD_RPL_ACP6x=m
 CONFIG_SND_SOC_AMD_ACP63_TOPLEVEL=m
@@ -6378,6 +6409,12 @@ CONFIG_SND_SOC_IMX_AUDMUX=m
 
 CONFIG_SND_SOC_CHV3_I2S=m
 CONFIG_SND_I2S_HI6210_I2S=m
+
+#
+# SoC Audio for Loongson CPUs
+#
+# end of SoC Audio for Loongson CPUs
+
 # CONFIG_SND_SOC_IMG is not set
 CONFIG_SND_SOC_INTEL_SST_TOPLEVEL=y
 CONFIG_SND_SOC_INTEL_CATPT=m
@@ -6385,6 +6422,7 @@ CONFIG_SND_SST_ATOM_HIFI2_PLATFORM=m
 CONFIG_SND_SST_ATOM_HIFI2_PLATFORM_PCI=m
 CONFIG_SND_SST_ATOM_HIFI2_PLATFORM_ACPI=m
 CONFIG_SND_SOC_ACPI_INTEL_MATCH=m
+CONFIG_SND_SOC_ACPI_INTEL_SDCA_QUIRKS=m
 CONFIG_SND_SOC_INTEL_AVS=m
 
 #
@@ -6451,6 +6489,8 @@ CONFIG_SND_SOC_INTEL_SOF_SSP_AMP_MACH=m
 CONFIG_SND_SOC_INTEL_EHL_RT5660_MACH=m
 CONFIG_SND_SOC_INTEL_SOUNDWIRE_SOF_MACH=m
 CONFIG_SND_SOC_MTK_BTCVSD=m
+CONFIG_SND_SOC_SDCA=m
+CONFIG_SND_SOC_SDCA_OPTIONAL=m
 CONFIG_SND_SOC_SOF_TOPLEVEL=y
 CONFIG_SND_SOC_SOF_PCI_DEV=m
 CONFIG_SND_SOC_SOF_PCI=m
@@ -6535,6 +6575,7 @@ CONFIG_SND_SOC_ADAU_UTILS=m
 CONFIG_SND_SOC_ADAU1372=m
 CONFIG_SND_SOC_ADAU1372_I2C=m
 CONFIG_SND_SOC_ADAU1372_SPI=m
+# CONFIG_SND_SOC_ADAU1373 is not set
 CONFIG_SND_SOC_ADAU1701=m
 CONFIG_SND_SOC_ADAU17X1=m
 CONFIG_SND_SOC_ADAU1761=m
@@ -6560,6 +6601,7 @@ CONFIG_SND_SOC_AW8738=m
 CONFIG_SND_SOC_AW88395_LIB=m
 CONFIG_SND_SOC_AW88395=m
 CONFIG_SND_SOC_AW88261=m
+# CONFIG_SND_SOC_AW88081 is not set
 CONFIG_SND_SOC_AW87390=m
 CONFIG_SND_SOC_AW88399=m
 CONFIG_SND_SOC_BD28623=m
@@ -6596,6 +6638,7 @@ CONFIG_SND_SOC_CS42L52=m
 CONFIG_SND_SOC_CS42L56=m
 CONFIG_SND_SOC_CS42L73=m
 CONFIG_SND_SOC_CS42L83=m
+# CONFIG_SND_SOC_CS42L84 is not set
 CONFIG_SND_SOC_CS4234=m
 CONFIG_SND_SOC_CS4265=m
 CONFIG_SND_SOC_CS4270=m
@@ -6620,6 +6663,7 @@ CONFIG_SND_SOC_ES7241=m
 CONFIG_SND_SOC_ES83XX_DSM_COMMON=m
 CONFIG_SND_SOC_ES8311=m
 CONFIG_SND_SOC_ES8316=m
+# CONFIG_SND_SOC_ES8323 is not set
 CONFIG_SND_SOC_ES8326=m
 CONFIG_SND_SOC_ES8328=m
 CONFIG_SND_SOC_ES8328_I2C=m
@@ -6668,6 +6712,7 @@ CONFIG_SND_SOC_PCM512x_SPI=m
 CONFIG_SND_SOC_PCM6240=m
 CONFIG_SND_SOC_PEB2466=m
 CONFIG_SND_SOC_RL6231=m
+CONFIG_SND_SOC_RT_SDW_COMMON=m
 CONFIG_SND_SOC_RL6347A=m
 CONFIG_SND_SOC_RT274=m
 CONFIG_SND_SOC_RT286=m
@@ -6705,6 +6750,7 @@ CONFIG_SND_SOC_RT711_SDW=m
 CONFIG_SND_SOC_RT711_SDCA_SDW=m
 CONFIG_SND_SOC_RT712_SDCA_SDW=m
 CONFIG_SND_SOC_RT712_SDCA_DMIC_SDW=m
+CONFIG_SND_SOC_RT721_SDCA_SDW=m
 CONFIG_SND_SOC_RT722_SDCA_SDW=m
 CONFIG_SND_SOC_RT715=m
 CONFIG_SND_SOC_RT715_SDW=m
@@ -6720,6 +6766,7 @@ CONFIG_SND_SOC_SIGMADSP_REGMAP=m
 CONFIG_SND_SOC_SIMPLE_AMPLIFIER=m
 CONFIG_SND_SOC_SIMPLE_MUX=m
 CONFIG_SND_SOC_SMA1303=m
+# CONFIG_SND_SOC_SMA1307 is not set
 CONFIG_SND_SOC_SPDIF=m
 CONFIG_SND_SOC_SRC4XXX_I2C=m
 CONFIG_SND_SOC_SRC4XXX=m
@@ -6764,6 +6811,7 @@ CONFIG_SND_SOC_TS3A227E=m
 CONFIG_SND_SOC_TSCS42XX=m
 CONFIG_SND_SOC_TSCS454=m
 CONFIG_SND_SOC_UDA1334=m
+# CONFIG_SND_SOC_UDA1342 is not set
 CONFIG_SND_SOC_WCD_CLASSH=m
 CONFIG_SND_SOC_WCD9335=m
 CONFIG_SND_SOC_WCD_MBHC=m
@@ -6818,6 +6866,8 @@ CONFIG_SND_SOC_NAU8821=m
 CONFIG_SND_SOC_NAU8822=m
 CONFIG_SND_SOC_NAU8824=m
 CONFIG_SND_SOC_NAU8825=m
+# CONFIG_SND_SOC_NTP8918 is not set
+# CONFIG_SND_SOC_NTP8835 is not set
 CONFIG_SND_SOC_TPA6130A2=m
 CONFIG_SND_SOC_LPASS_MACRO_COMMON=m
 CONFIG_SND_SOC_LPASS_WSA_MACRO=m
@@ -6888,6 +6938,7 @@ CONFIG_HID_VIVALDI=m
 CONFIG_HID_GT683R=m
 CONFIG_HID_KEYTOUCH=m
 CONFIG_HID_KYE=m
+# CONFIG_HID_KYSONA is not set
 CONFIG_HID_UCLOGIC=m
 CONFIG_HID_WALTOP=m
 CONFIG_HID_VIEWSONIC=m
@@ -7426,6 +7477,7 @@ CONFIG_TYPEC_MUX_INTEL_PMC=m
 CONFIG_TYPEC_MUX_IT5205=m
 CONFIG_TYPEC_MUX_NB7VPQ904M=m
 CONFIG_TYPEC_MUX_PTN36502=m
+# CONFIG_TYPEC_MUX_TUSB1046 is not set
 CONFIG_TYPEC_MUX_WCD939X_USBSS=m
 # end of USB Type-C Multiplexer/DeMultiplexer Switch support
 
@@ -7451,6 +7503,7 @@ CONFIG_MMC_TEST=m
 # CONFIG_MMC_DEBUG is not set
 CONFIG_MMC_SDHCI=m
 CONFIG_MMC_SDHCI_IO_ACCESSORS=y
+CONFIG_MMC_SDHCI_UHS2=m
 CONFIG_MMC_SDHCI_PCI=m
 CONFIG_MMC_RICOH_MMC=y
 CONFIG_MMC_SDHCI_ACPI=m
@@ -7892,6 +7945,7 @@ CONFIG_VFIO_PCI=m
 CONFIG_VFIO_PCI_VGA=y
 CONFIG_VFIO_PCI_IGD=y
 CONFIG_VIRTIO_VFIO_PCI=m
+CONFIG_VIRTIO_VFIO_PCI_ADMIN_LEGACY=y
 # end of VFIO support for PCI devices
 
 CONFIG_VFIO_MDEV=m
@@ -7982,12 +8036,7 @@ CONFIG_XEN_FRONT_PGDIR_SHBUF=m
 # CONFIG_GREYBUS is not set
 # CONFIG_COMEDI is not set
 CONFIG_STAGING=y
-# CONFIG_RTLLIB is not set
 # CONFIG_RTL8723BS is not set
-# CONFIG_R8712U is not set
-# CONFIG_RTS5208 is not set
-# CONFIG_VT6655 is not set
-# CONFIG_VT6656 is not set
 
 #
 # IIO staging drivers
@@ -8030,11 +8079,10 @@ CONFIG_AD5933=m
 
 # CONFIG_FB_SM750 is not set
 # CONFIG_STAGING_MEDIA is not set
-# CONFIG_LTE_GDM724X is not set
 # CONFIG_FB_TFT is not set
 # CONFIG_MOST_COMPONENTS is not set
-# CONFIG_FIELDBUS_DEV is not set
 # CONFIG_VME_BUS is not set
+# CONFIG_GPIB is not set
 # CONFIG_GOLDFISH is not set
 CONFIG_CHROME_PLATFORMS=y
 CONFIG_CHROMEOS_ACPI=m
@@ -8064,7 +8112,6 @@ CONFIG_WILCO_EC=m
 CONFIG_WILCO_EC_DEBUGFS=m
 CONFIG_WILCO_EC_EVENTS=m
 CONFIG_WILCO_EC_TELEMETRY=m
-# CONFIG_CZNIC_PLATFORMS is not set
 # CONFIG_MELLANOX_PLATFORM is not set
 CONFIG_SURFACE_PLATFORMS=y
 CONFIG_SURFACE3_WMI=m
@@ -8094,9 +8141,17 @@ CONFIG_YT2_1380=m
 CONFIG_ACERHDF=m
 CONFIG_ACER_WIRELESS=m
 CONFIG_ACER_WMI=m
+
+#
+# AMD HSMP Driver
+#
+# CONFIG_AMD_HSMP_ACPI is not set
+# CONFIG_AMD_HSMP_PLAT is not set
+# end of AMD HSMP Driver
+
 CONFIG_AMD_PMC=m
 CONFIG_AMD_MP2_STB=y
-CONFIG_AMD_HSMP=m
+CONFIG_AMD_3D_VCACHE=m
 CONFIG_AMD_WBRF=y
 CONFIG_ADV_SWBUTTON=m
 CONFIG_APPLE_GMUX=m
@@ -8285,6 +8340,7 @@ CONFIG_INTEL_IOMMU=y
 CONFIG_INTEL_IOMMU_FLOPPY_WA=y
 CONFIG_INTEL_IOMMU_SCALABLE_MODE_DEFAULT_ON=y
 CONFIG_INTEL_IOMMU_PERF_EVENTS=y
+CONFIG_IOMMUFD_DRIVER_CORE=y
 CONFIG_IOMMUFD=m
 CONFIG_IRQ_REMAP=y
 CONFIG_HYPERV_IOMMU=y
@@ -8541,8 +8597,10 @@ CONFIG_AD7476=m
 CONFIG_AD7606=m
 CONFIG_AD7606_IFACE_PARALLEL=m
 CONFIG_AD7606_IFACE_SPI=m
+# CONFIG_AD7625 is not set
 CONFIG_AD7766=m
 CONFIG_AD7768_1=m
+# CONFIG_AD7779 is not set
 CONFIG_AD7780=m
 CONFIG_AD7791=m
 CONFIG_AD7793=m
@@ -8558,6 +8616,7 @@ CONFIG_CC10001_ADC=m
 CONFIG_DA9150_GPADC=m
 CONFIG_DLN2_ADC=m
 CONFIG_ENVELOPE_DETECTOR=m
+# CONFIG_GEHC_PMC_ADC is not set
 CONFIG_HI8435=m
 CONFIG_HX711=m
 CONFIG_INA2XX_ADC=m
@@ -8710,6 +8769,8 @@ CONFIG_IIO_ST_SENSORS_CORE=m
 #
 # Digital to analog converters
 #
+# CONFIG_AD3552R_HS is not set
+CONFIG_AD3552R_LIB=m
 CONFIG_AD3552R=m
 CONFIG_AD5064=m
 CONFIG_AD5360=m
@@ -8736,6 +8797,7 @@ CONFIG_AD5770R=m
 CONFIG_AD5791=m
 CONFIG_AD7293=m
 CONFIG_AD7303=m
+# CONFIG_AD8460 is not set
 CONFIG_AD8801=m
 CONFIG_DPOT_DAC=m
 CONFIG_DS4424=m
@@ -8861,6 +8923,8 @@ CONFIG_ADIS16480=m
 CONFIG_BMI160=m
 CONFIG_BMI160_I2C=m
 CONFIG_BMI160_SPI=m
+# CONFIG_BMI270_I2C is not set
+# CONFIG_BMI270_SPI is not set
 CONFIG_BMI323=m
 CONFIG_BMI323_I2C=m
 CONFIG_BMI323_SPI=m
@@ -8877,6 +8941,7 @@ CONFIG_INV_ICM42600_SPI=m
 CONFIG_INV_MPU6050_IIO=m
 CONFIG_INV_MPU6050_I2C=m
 CONFIG_INV_MPU6050_SPI=m
+# CONFIG_SMI240 is not set
 CONFIG_IIO_ST_LSM6DSX=m
 CONFIG_IIO_ST_LSM6DSX_I2C=m
 CONFIG_IIO_ST_LSM6DSX_SPI=m
@@ -8950,6 +9015,7 @@ CONFIG_TSL4531=m
 CONFIG_US5182D=m
 CONFIG_VCNL4000=m
 CONFIG_VCNL4035=m
+# CONFIG_VEML3235 is not set
 CONFIG_VEML6030=m
 CONFIG_VEML6040=m
 CONFIG_VEML6070=m
@@ -8964,6 +9030,7 @@ CONFIG_ZOPT2201=m
 CONFIG_AK8974=m
 CONFIG_AK8975=m
 CONFIG_AK09911=m
+# CONFIG_ALS31300 is not set
 CONFIG_BMC150_MAGN=m
 CONFIG_BMC150_MAGN_I2C=m
 CONFIG_BMC150_MAGN_SPI=m
@@ -9161,7 +9228,6 @@ CONFIG_PWM_PCA9685=m
 #
 # IRQ chip support
 #
-CONFIG_LAN966X_OIC=m
 CONFIG_MADERA_IRQ=m
 # end of IRQ chip support
 
@@ -9340,7 +9406,6 @@ CONFIG_EXT4_USE_FOR_EXT2=y
 CONFIG_JBD2=m
 # CONFIG_JBD2_DEBUG is not set
 CONFIG_FS_MBCACHE=m
-# CONFIG_REISERFS_FS is not set
 # CONFIG_JFS_FS is not set
 # CONFIG_XFS_FS is not set
 # CONFIG_GFS2_FS is not set
@@ -9852,7 +9917,7 @@ CONFIG_CRYPTO_USER_API_HASH=m
 CONFIG_CRYPTO_USER_API_SKCIPHER=m
 CONFIG_CRYPTO_USER_API_RNG=m
 # CONFIG_CRYPTO_USER_API_RNG_CAVP is not set
-# CONFIG_CRYPTO_USER_API_AEAD is not set
+CONFIG_CRYPTO_USER_API_AEAD=m
 # CONFIG_CRYPTO_USER_API_ENABLE_OBSOLETE is not set
 # end of Userspace interface
 
@@ -9881,13 +9946,13 @@ CONFIG_CRYPTO_AES_NI_INTEL=m
 # CONFIG_CRYPTO_ARIA_AESNI_AVX_X86_64 is not set
 # CONFIG_CRYPTO_ARIA_AESNI_AVX2_X86_64 is not set
 # CONFIG_CRYPTO_ARIA_GFNI_AVX512_X86_64 is not set
-CONFIG_CRYPTO_CHACHA20_X86_64=m
+# CONFIG_CRYPTO_CHACHA20_X86_64 is not set
 # CONFIG_CRYPTO_AEGIS128_AESNI_SSE2 is not set
 # CONFIG_CRYPTO_NHPOLY1305_SSE2 is not set
 # CONFIG_CRYPTO_NHPOLY1305_AVX2 is not set
-CONFIG_CRYPTO_BLAKE2S_X86=y
+# CONFIG_CRYPTO_BLAKE2S_X86 is not set
 # CONFIG_CRYPTO_POLYVAL_CLMUL_NI is not set
-CONFIG_CRYPTO_POLY1305_X86_64=m
+# CONFIG_CRYPTO_POLY1305_X86_64 is not set
 # CONFIG_CRYPTO_SHA1_SSSE3 is not set
 CONFIG_CRYPTO_SHA256_SSSE3=m
 CONFIG_CRYPTO_SHA512_SSSE3=m
@@ -9965,19 +10030,15 @@ CONFIG_ARCH_USE_SYM_ANNOTATIONS=y
 CONFIG_CRYPTO_LIB_UTILS=y
 CONFIG_CRYPTO_LIB_AES=y
 CONFIG_CRYPTO_LIB_AESCFB=m
+CONFIG_CRYPTO_LIB_AESGCM=m
 CONFIG_CRYPTO_LIB_ARC4=m
 CONFIG_CRYPTO_LIB_GF128MUL=y
-CONFIG_CRYPTO_ARCH_HAVE_LIB_BLAKE2S=y
 CONFIG_CRYPTO_LIB_BLAKE2S_GENERIC=y
-CONFIG_CRYPTO_ARCH_HAVE_LIB_CHACHA=m
-CONFIG_CRYPTO_LIB_CHACHA_GENERIC=m
 # CONFIG_CRYPTO_LIB_CHACHA is not set
 CONFIG_CRYPTO_ARCH_HAVE_LIB_CURVE25519=m
 CONFIG_CRYPTO_LIB_CURVE25519_GENERIC=m
 # CONFIG_CRYPTO_LIB_CURVE25519 is not set
 CONFIG_CRYPTO_LIB_POLY1305_RSIZE=11
-CONFIG_CRYPTO_ARCH_HAVE_LIB_POLY1305=m
-CONFIG_CRYPTO_LIB_POLY1305_GENERIC=m
 # CONFIG_CRYPTO_LIB_POLY1305 is not set
 # CONFIG_CRYPTO_LIB_CHACHA20POLY1305 is not set
 CONFIG_CRYPTO_LIB_SHA1=y
@@ -10117,6 +10178,8 @@ CONFIG_SBITMAP=y
 # end of Library routines
 
 CONFIG_FIRMWARE_TABLE=y
+CONFIG_UNION_FIND=y
+CONFIG_MIN_HEAP=y
 
 #
 # Kernel hacking
@@ -10193,6 +10256,7 @@ CONFIG_HAVE_KCSAN_COMPILER=y
 # CONFIG_NET_DEV_REFCNT_TRACKER is not set
 # CONFIG_NET_NS_REFCNT_TRACKER is not set
 # CONFIG_DEBUG_NET is not set
+# CONFIG_DEBUG_NET_SMALL_RTNL is not set
 # end of Networking Debugging
 
 #
